--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <title>Test Assignment AngularJS and D3.js</title>
+
+        <!--  iCONS -->
+        <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+
         <link type="text/css" rel="stylesheet" href='css/bootstrap.css' />
         <link type="text/css" rel="stylesheet" href='css/style.css' />
         <link type="text/css" rel="stylesheet" href='css/dc.css' />
