--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html data-ng-app="MobileApplication">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <title>Test Assignment AngularJS and D3.js</title>
+        <title>Mobile APP</title>
 
         <!--  iCONS -->
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
