--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<!-- 
+ * Problem : Index
+ * Author  : Almgwary
+ * Date    : dd-mm-yy
+ * Thin    : ddM
+ -->
+
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
     "http://www.w3.org/TR/html4/loose.dtd">
 <html data-ng-app="MobileApplication">
@@ -7,7 +14,7 @@
 
         <!--  iCONS -->
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-
+        <!--  Css -->
         <link type="text/css" rel="stylesheet" href='css/bootstrap.css' />
         <link type="text/css" rel="stylesheet" href='css/style.css' />
         <link type="text/css" rel="stylesheet" href='css/dc.css' />
@@ -25,13 +32,13 @@
         <script type="text/javascript" src="js/colorbrewer.js"></script>
         <script type="text/javascript" src="js/angular.js"></script>
         <script type="text/javascript" src="js/ui-bootstrap-tpls-0.10.0.min.js"></script>
-        
+        <!-- import Application and directive -->
         <script type="text/javascript" src="app/Application.js"></script>
         <script type="text/javascript" src="app/directives.js"></script> 
-         
+        <!-- import moedls -->
         <script type="text/javascript" src="app/models/MainModel.js"></script>
         <script type="text/javascript" src="app/models/AddModel.js"></script>
- 
+        <!-- import controlers -->
         <script type="text/javascript" src="app/controllers/MainController.js"></script>
         <script type="text/javascript" src="app/controllers/AddController.js"></script>
 
